--- a/Job Ticket/.settings/org.eclipse.core.resources.prefs
+++ b/Job Ticket/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebContent/blubb.txt=UTF-8
 encoding//WebContent/styling.js=UTF-8
 encoding//src/de/rc/ProduktModel.java=UTF-8
+encoding/<project>=UTF-8
