--- a/Job Ticket/.classpath
+++ b/Job Ticket/.classpath
@@ -6,33 +6,26 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/primefaces-extensions-0.5.0.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/derby">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/myfaces">
+		<attributes>
+			<attribute name="owner.project.facets" value="#system#;jst.jsf"/>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/eclipselink">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/derby 10.9.1">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/primefaces">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/primefaces-3.4.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JSF (Apache MyFaces 2.1.7">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-			<attribute name="owner.project.facets" value="jst.jsf"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink 2.4.1">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/Java/eclipselink 2.4.1/eclipselink/jlib/jpa/javax.persistence_2.0.4.v201112161009.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
